--- a/todo/package.json
+++ b/todo/package.json
@@ -29,5 +29,10 @@
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "browser" : {
+    "fs" : false,
+    "os" : false,
+    "path" : false
   }
 }
